# kairos

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
example/: config.toml
src/: collection.rs  config.rs  database.rs  main.rs  page.rs  pushover.rs  request.rs  schema.sql
systemd/: kairos.service
test-site/: detailed_1.html  detailed_2.html  plain.html
