[package]
name = "kairos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.*", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt"] }
toml = "0.9.5"
