[package]
name = "kairos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.*", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
env_logger = "0.11.8"
indexmap = "2.11.0"
libxml = "0.3.7"
log = "0.4.27"
reqwest = "0.12.23"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
rusqlite = "0.37.0"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-util = "0.7.16"
toml = "0.9.5"
